--- a/FMS/src/main/webapp/home.html
+++ b/FMS/src/main/webapp/home.html
@@ -52,7 +52,7 @@
 <div class="container py-5">
     <div class="text-center mb-5">
         <h1 class="display-4 text-primary fw-bold">University Management System</h1>
-        <p class="lead">Manage Students, Courses, and Enrollments with ease</p>
+        <p class="lead">Manage Faculties, Courses, and Enrollments with ease</p>
     </div>
 
     <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -62,8 +62,8 @@
             <div class="card shadow-sm border-primary">
                 <div class="card-body text-center">
                     <h5 class="card-title">Faculty Management</h5>
-                    <p class="card-text">Add, update, view, or delete students</p>
-                    <a href="Student" class="btn btn-outline-primary">Manage Students</a>
+                    <p class="card-text">Add, update, view, or delete faculties</p>
+                    <a href="insert.html" class="btn btn-outline-primary">Manage Faculty</a>
                 </div>
             </div>
         </div>
